--- a/File_System/tree_directory.html
+++ b/File_System/tree_directory.html
@@ -42,6 +42,10 @@
             </div>
         </nav>
         <br>
+        <div class="jumbotron">
+            <h1 class="display-3">Tree Directory</h1>
+            <p class="lead">A tree structure is the most common directory structure. The tree has a root directory, and every file in the system have a unique path.</p>
+        </div>
       <div class="container">
         <div id = 'divx'></div>
       </div>
