--- a/File_System/two_level_directory.html
+++ b/File_System/two_level_directory.html
@@ -42,6 +42,10 @@
             </div>
         </nav>
         <br>
+        <div class="jumbotron">
+            <h1 class="display-3">Two Level Directory</h1>
+            <p class="lead">In the two-level directory structure, each user has there own user files directory (UFD). The UFDs has similar structures, but each lists have only the files of a single user.</p>
+        </div>
       <div class="container">
         <div id = 'divx'></div>
       </div>
