--- a/Index/index.html
+++ b/Index/index.html
@@ -8,8 +8,6 @@
 	<meta name="description" content="OS Project index page" />
 	<meta name="keywords"  content="Scheduling,Bankers,OS" />
 	<meta name="Resource-type" content="Document" />
-	<link rel="stylesheet" type="text/css" href="css/bootswatch.css" />
-
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootswatch.css" />
@@ -23,7 +21,7 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#c5e0d8', '#91bab3' , '#4BBFC3'],
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#95e0d8', '#91bab3' , '#4BBFC3'],
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage', '6thpage', '7thpage' , '8thpage'],
 				menu: '#menu',
 				easingcss3: 'cubic-bezier(0.175, 0.885, 0.320, 1.275)'
@@ -40,65 +38,66 @@
 	<li data-menuanchor="4thpage"><a href="#4thpage">Disk Scheduling</a></li>
 	<li data-menuanchor="5thpage"><a href="#5thpage">Process Sync</a></li>
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
-	<li data-menuanchor="8thpage"><a href="#7thpage">Files</a></li>
-	<li data-menuanchor="10thpage"><a href="#8thpage">Paging</a></li>
+	<li data-menuanchor="7thpage"><a href="#7thpage">Files</a></li>
+	<li data-menuanchor="8thpage"><a href="#8thpage">Paging</a></li>
 </ul>
 
 <div id="fullpage">
 	<div class="section " id="section0">
-		<h1>Operating System Simxulator</h1>
+		<h1>Operating System Simulator</h1>
 		<h4>Project By: Group 6 (17CO201-210)</h4>
-		<li>Member 1: Aashay Maheshwari(17CO201)</li>
-		<li>Member 2: Abheek(17CO202)</li>
+		<li>Member 1: Aashay Maheshwarkar (17CO201)</li>
+		<li>Member 2: Abheek Babel(17CO202)</li>
 		<li>Member 3: Abhishek Ranjan(17CO203)</li>
 		<li>Member 4: Adarsh Kumar(17CO204)</li>
 		<li>Member 5: Chetan Agarwal(17CO205)</li>
-		<li>Member 6: Akash Khayath(17CO206)</li>
+		<li>Member 6: Akash Kayath(17CO206)</li>
 		<li>Member 7: Akash Sahoo(17CO207)</li>
 		<li>Member 8: Ankit Jain(17CO208)</li>
 		<li>Member 9: Arjun(17CO209)</li>
 		<li>Member 10: Avdhesh Pratap Singh Yadav(17CO210)</li>
 	</div>
 	<div class="section" id="section1">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
-				<div class="column1">
+				<div class="column1" >
 					<h1><a href="../Process Scheduling/index.html">Process Scheduling</a></h1>
 				</div>
 				<div class="column1">
 					 <ul id="scheduling-style">
-  					   <li><a href="../Process Scheduling/index.html">Shortest Job First</a></li>
-					   <li><a href="../Process Scheduling/index.html">First Come First Served</a></li>
-					   <li><a href="../Process Scheduling/index.html">Multilevel Queue</a></li>
-					   <li><a href="../Process Scheduling/index.html">Round Robin</a></li>
-					   <li><a href="../Process Scheduling/index.html">Priority Scheduling</a></li>
+  					   <li><a href="../Process Scheduling/src/sjf.html">Shortest Job First</a></li>
+					   <li><a href="../Process Scheduling/src/fcfs.html">First Come First Served</a></li>
+					   <li><a href="../Process Scheduling/src/multilevelQueue.html">Multilevel Queue</a></li>
+					   <li><a href="../Process Scheduling/src/rr.html">Round Robin</a></li>
+					   <li><a href="../Process Scheduling/src/priority.html">Priority Scheduling</a></li>
 					 </ul>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="section" id="section2">
-		<div class="intro">
-			<h1><a href="../Bankers/index.html">Banker's Algorithm</a></h1>
+		<div class="intro" style="padding:10px;margin:20px">
+			<h1><a href="../Bankers/index.html" >Banker's Algorithm</a></h1>
 			<p>Banker's Algorithm is a resource allocation and deadlock avoidance algorithm that tests for safety by simulating the allocation of predetermined maximum possible amounts of all resources, and then makes an "safe-state" check to test for possible deadlock conditions for all other pending activities, before deciding whether allocation should be allowed to continue.</p>
 		</div>
 	</div>
 	<div class="section" id="section3">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column1">
-					<h1>Secondary Storage</h1>
+					<h1><a href="../Disk/disk.html">Disk Scheduling</a></h1>
+					<p>Disk scheduling is the method that computer operating systems use to decide in which order the block I/O operations will be submitted to storage volumes. I/O scheduling is sometimes called disk scheduling.</p>
 				</div>
-				<div class="column1">
+				<!-- <div class="column1">
 					 <ul id="d-scheduling-style">
   					   <li><a href="../Disk/disk.html">1-Disk Scheduling</a></li>
 					 </ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
 	<div class="section" id="section4">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column2">
 					<h1>Process Synchronization</h1>
@@ -116,7 +115,7 @@
 		</div>
 	</div>
 	<div class="section" id="section5">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column1">
 					<h1>Memory Management</h1>
@@ -131,16 +130,27 @@
 		</div>
 	</div>
 	<div class="section" id="section6">
-		<div class="intro">
-			<h1><a href="../File_System/index.html">File Management</h1>
-			<p>File system represents data from a logical view point. The different directory structures for file systems covered here are single-level, two-level and tree-structured directory.</p>
+		<div class="intro" style="padding:10px;margin:20px">
+			<div class="row">
+				<div class="column2">
+					<h1><a href="../File_System/index.html">File Management</a></h1>
+					<p>A file-system is a way of storing information on a computer that usually consists of a hierarchy of directories that is used to organize files.</p>
+				</div>
+				<div class="column2">
+						<ul id="synchronization-style">
+							<li><a href="../File_System/single_level_directory.html">Single Level Directory</a></li>
+							<li><a href="../File_System/tree_directory.html">Tree Directory</a></li>
+							<li><a href="../File_System/two_level_directory.html">Two Level Directory</a></li>
+						</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="section" id="section7">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column2">
-					<h1>    	Paging</h1>
+					<h1>Paging</h1>
 				</div>
 				<div class="column2">
 					 <ul id="synchronization-style">
