Added read more

--- a/File_System/single_level_directory.html
+++ b/File_System/single_level_directory.html
@@ -47,7 +47,11 @@
         <div class="jumbotron">
             <h1 class="display-3">Single Level Directory</h1>
             <p class="lead">Single level directory is simplest directory structure.In it all files are contained in same directory which make it easy to support and understand.</p>
-        </div>
+            <hr class="my-4">
+            <p class="lead">
+              <a class="btn btn-success" href="https://www.geeksforgeeks.org/operating-system-structures-of-directory/" role="button" target="_blank">Read More..</a>
+            </p>
+          </div>
       <div class="container">
         <div id = 'divx'></div>
       </div>
