--- a/File_System/tree_directory.html
+++ b/File_System/tree_directory.html
@@ -45,7 +45,11 @@
         <div class="jumbotron">
             <h1 class="display-3">Tree Directory</h1>
             <p class="lead">A tree structure is the most common directory structure. The tree has a root directory, and every file in the system have a unique path.</p>
-        </div>
+            <hr class="my-4">
+            <p class="lead">
+              <a class="btn btn-success" href="https://www.geeksforgeeks.org/operating-system-structures-of-directory/" role="button" target="_blank">Read More..</a>
+            </p>
+          </div>
       <div class="container">
         <div id = 'divx'></div>
       </div>
