--- a/MVT/index.html
+++ b/MVT/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-     <!-- <link rel="stylesheet" type="text/css" href="bootswatch.css" /> -->
+     <link rel="stylesheet" type="text/css" href="bootswatch.css" />
 
     <!-- JavaScript Files -->
     <script src="js/jquery-3.1.1.min.js"></script>
@@ -29,6 +29,8 @@
         <br><br>
           <h1>MVT <br> </h1>
           <div id="selection-form">
+ <a class="btn btn-success" href="https://www.geeksforgeeks.org/variable-or-dynamic-partitioning-in-operating-system/" role="button">Read More...</a>
+          <br>
           <button type="button" id="first-fit-select" class="btn btn-default">First-Fit</button>
           <button type="button" id="best-fit-select" class="btn btn-default">Best-Fit</button>
           <button type="button" id="worst-fit-select" class="btn btn-default">Worst-Fit</button>
