--- a/Process Scheduling/src/fcfs.html
+++ b/Process Scheduling/src/fcfs.html
@@ -8,12 +8,20 @@
         <link rel="stylesheet" type="text/css" href="../css/index.css">
         <script type="text/javascript" src="../js/index.js"></script>
         <style>
-        body {
-            color: black;
-        }
-        .jumbotron{
-            color: white;
-        }
+            body {
+                background-color: rgb(60,179,113);
+            }
+
+            .circle {
+                border-radius: 25px;
+                font-size: 20px;
+                color: #fff;
+                text-align: center;
+                background: #000
+            }
+            #heading{
+                padding-top: 25px;
+            }
         </style>
     </head>
     <body>
@@ -27,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Process Scheduling<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../Index/index.html#secondPage">Process Scheduling<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../../Index/index.html#4thpage">Disk Scheduling</a>
@@ -52,9 +60,13 @@
         </nav>
         <br>
         <div class="container">
-            <div class="jumbotron">
-                <h1 class="display-3">FCFS Scheduling</h1>
+            <div class="circle">
+                <h1 id="heading">FCFS Scheduling</h1>
                 <br>
+            </div>
+            <br>
+            <br>
+            <div class="container">
 				<div id="showinput"></div>
 				<hr>
                 <div class="row">
@@ -67,6 +79,7 @@
                         <input class="form-control" id="newbt" name="bt" placeholder="Burst Time" type="text" size="35">
                     </div>
                 </div>
+            </div>
                 <!-- <div id="inputsection" class="card">
                     <div style="width: 300px; float:left;text-align:left; margin-left: 20px;">
                         Arrival Time:
@@ -89,6 +102,18 @@
                 </div> -->
 				
             <!-- Gantt Chart -->
+            <div style="margin-top: 50px;">
+                <h2 id="table-heading" style="text-align:center;"></h2>
+                <div>
+                    <table id="tab" class="table table-striped centered responsive-table" style="border-color: black; border-width: 2px; align: center; bgcolor: white; cellspacing: 10px;">
+                        <thead id="thead">
+                        </thead>
+                        <tbody id="ptable">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
             <div style="margin-top: 150px;">
                 <h2 id ="chart-header" style="text-align:center;"></h2>
                 <br />
@@ -103,22 +128,12 @@
                 </div>
             </div>
 			<!-- CPU Operations -->
-            <div style="margin-top: 100px;">
+            <div style="margin-top: 100px;display:none;">
                 <h3 id="operations-heading" style="text-align:center;"></h3>
                 <div id="operations"></div>
             </div>
 			<!-- Table -->
-            <div style="margin-top: 50px;">
-                <h2 id="table-heading" style="text-align:center;"></h2>
-                <div>
-                    <table id="tab" class="table table-striped centered responsive-table" style="border-color: black; border-width: 2px; align: center; bgcolor: white; cellspacing: 10px;">
-                        <thead id="thead">
-                        </thead>
-                        <tbody id="ptable">
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+
         </div>
     </body>
 </html>
