--- a/Process Scheduling/src/priority.html
+++ b/Process Scheduling/src/priority.html
@@ -6,15 +6,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/pri.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
-		<link rel="stylesheet" type="text/css" href="../css/index.css"></link>
-		<style>
-			body {
-					color: black;
-			}
-			.jumbotron{
-					color: white;
-			}
-			</style>
+    <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
 </head>
 
 <body >
@@ -27,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Process Scheduling<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../Index/index.html#secondPage">Process Scheduling<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../../Index/index.html#4thpage">Disk Scheduling</a>
