--- a/MFT/index.html
+++ b/MFT/index.html
@@ -48,7 +48,7 @@
                 <hr class="my-4">
                 <p>Memory is partitioned into fixed size partitions and each job is assigned to a partition. The memory assigned to a partition does not change.</p>
                 <p class="lead">
-                  <a class="btn btn-success" href="https://docs.google.com/presentation/d/1xcAL0M9FgeertqbFYN_nitQzvmiQ2tB-FzEII20t9po/present#slide=57" role="button">Read More...</a>
+                  <a class="btn btn-success" href="https://www.geeksforgeeks.org/operating-system-memory-management-partition-allocation-method/" role="button">Read More...</a>
                 </p>
             </div>
             <br>
