--- a/Index/index.html
+++ b/Index/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>OS 5</title>
+	<title>Operating System Simulator</title>
 	<meta name="author" content="Pavan" />
 	<meta name="description" content="OS Project index page" />
 	<meta name="keywords"  content="Scheduling,Bankers,OS" />
