--- a/PageReplacement/lru.html
+++ b/PageReplacement/lru.html
@@ -119,7 +119,7 @@
         </script>
            <div class="jumbotron">
             <h1 class="display-3">Least Recently Used Page Replacement</h1>
-            <p class="lead">It is one of the simplest page replacement algorithm. The oldest page, which has spent the longest time in memory is chosen and replaced. This algorithm is implemented with the help of FIFO queue to hold the pages in memory. A page is inserted at the rear end of the queue and is replaced at the front of the queue.</p>
+            <p class="lead">The Least Recently Used (LRU) page replacement policy replaces the page that has not been used for the longest period of time. It is one of the algorithms that were made to approximate if not better the efficiency of the optimal page replacement algorithm. The optimal algorithm assumes the entire reference string to be present at the time of allocation and replaces the page that will not be used for the longest period of time. LRU page replacement policy is based on the observation that pages that have been heavily used in the last few instructions will probably be heavily used again in the next few. Conversely, pages that have not been used for ages will probably remain unused for a long time.</p>
             <hr class="my-4">
             <p class="lead">
               <a class="btn btn-success" href="https://www.geeksforgeeks.org/program-page-replacement-algorithms-set-1-lru/" role="button">Read More</a>
