--- a/PageReplacement/mru.html
+++ b/PageReplacement/mru.html
@@ -124,7 +124,7 @@
         </script>
            <div class="jumbotron">
             <h1 class="display-3">Most Recently Used Page Replacement</h1>
-            <p class="lead">It is one of the simplest page replacement algorithm. The oldest page, which has spent the longest time in memory is chosen and replaced. This algorithm is implemented with the help of FIFO queue to hold the pages in memory. A page is inserted at the rear end of the queue and is replaced at the front of the queue.</p>
+            <p class="lead">In this algorithm, the page that is most recently used i.e last accessed page is replaced.</p>
             <hr class="my-4">
             <p class="lead">
               <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Cache_replacement_policies" role="button">Read More</a>
