--- a/PageReplacement/lfu.html
+++ b/PageReplacement/lfu.html
@@ -123,7 +123,7 @@
         </script>
         <div class="jumbotron">
             <h1 class="display-3">Least Frequently Used Page Replacement</h1>
-            <p class="lead">It is one of the simplest page replacement algorithm. The oldest page, which has spent the longest time in memory is chosen and replaced. This algorithm is implemented with the help of FIFO queue to hold the pages in memory. A page is inserted at the rear end of the queue and is replaced at the front of the queue.</p>
+            <p class="lead">In LFU (Least Frequently Used) algorithm the page which has the smallest count is going to be replaced. The reason for this selection is that a mostly used page should have a large reference count. This algorithm suffers from the situation in which a page is used heavily during the staring phase of aprocess, but then is never used again. Since it was used heavily, it has a large frequency (count) and remains in memory even through it is no longer needed.</p>
             <hr class="my-4">
             <p class="lead">
               <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Least_frequently_used" role="button">Read More</a>
