--- a/PageReplacement/optimal.html
+++ b/PageReplacement/optimal.html
@@ -133,7 +133,7 @@
         </script>
         <div class="jumbotron">
             <h1 class="display-3">Optimal Page Replacement</h1>
-            <p class="lead">It is one of the simplest page replacement algorithm. The oldest page, which has spent the longest time in memory is chosen and replaced. This algorithm is implemented with the help of FIFO queue to hold the pages in memory. A page is inserted at the rear end of the queue and is replaced at the front of the queue.</p>
+            <p class="lead">The theoretically optimal page replacement algorithm (also known as OPT, clairvoyant replacement algorithm, or Bélády's optimal page replacement policy) is an algorithm that works as follows: when a page needs to be swapped in, the operating system swaps out the page whose next use will occur farthest in the future. For example, a page that is not going to be used for the next 6 seconds will be swapped out over a page that is going to be used within the next 0.4 seconds.</p>
             <hr class="my-4">
             <p class="lead">
               <a class="btn btn-success" href="https://www.geeksforgeeks.org/program-optimal-page-replacement-algorithm/" role="button">Read More</a>
