--- a/MFT/index.html
+++ b/MFT/index.html
@@ -17,25 +17,23 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Process Scheduling<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../Index/index.html#secondPage">Process Scheduling<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Disk/disk.html">Disk Scheduling</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Banker's Algorithm</a>
+                    <a class="nav-link" href="../Bankers/index.html">Banker's Algorithm</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Index/index.html#5thpage">Process Synchronization</a>
                   </li>
+                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Semaphores</a>
+                    <a class="nav-link" href="../Index/index.html#7thpage">File Management</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">File Management</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../Index/about.html">About</a>
                   </li>
                 </ul>
             </div>
