--- a/Index/about.html
+++ b/Index/about.html
@@ -48,84 +48,69 @@
           <h2 class="my-4">Our Team</h2>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
-          <h3>Aashay Maheshwari
+          <h3>Aashay Maheshwarkar
             <small>171CO201</small>
           </h3>
-          <p>Intro</p>
+          <p>Disk Scheduling (SSTF, CSCAN, LOOK, Compare All)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Abheek
             <small>171CO202</small>
           </h3>
-          <p>Intro</p>
+          <p>Disk Scheduling (FCFS, SCAN, CLOOK)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Abhishek Ranjan
-            <small>171CO203</small>
+            <small>17CO203</small>
           </h3>
-          <p>Intro</p>
+          <p>Process Synchronization (Dining Philosopher, Reader-Writer, Producer-Consumer, Cigarette Smoker)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Adarsh Kumar
             <small>171CO204</small>
           </h3>
-          <p>Intro</p>
+          <p>MVT (First Fit, Best Fit, Worst Fit)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Chetan Agarwal
             <small>171CO205</small>
           </h3>
-          <p>Intro</p>
+          <p>File Management (Single level, Two Level and Tree Directory)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Akash Khayath
             <small>171CO206</small>
           </h3>
-          <p>Intro</p>
+          <p>Process Scheduling (FCFs, SJF, RR)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Akash Sahoo
             <small>171CO207</small>
           </h3>
-          <p>Intro</p>
+          <p>-</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Ankit Jain
             <small>171CO208</small>
           </h3>
-          <p>Intro</p>
+          <p>Paging (Logical to Physical Address)<br>Page Replacement (FIFO, LRU, MRU, OPTIMAL, LFU, MFU)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Arjun
             <small>171CO209</small>
           </h3>
-          <p>Intro</p>
+          <p>CPU Scheduling (SSRTF, Priority, Multi-level Queue)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/def_profile.jpeg" alt="">
           <h3>Avdhesh Pratap Singh Yadav
             <small>171CO210</small>
           </h3>
-          <p>Intro</p>
+          <p>Banker's Algorithm<br>MFT (First Fit, Best Fit, Worst Fit)</p>
         </div>
       </div>
 
     </div>
 
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Just Chill 2050</p>
-      </div>
-    </footer>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
