--- a/Index/index.html
+++ b/Index/index.html
@@ -40,6 +40,7 @@
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
 	<li data-menuanchor="7thpage"><a href="#7thpage">Files</a></li>
 	<li data-menuanchor="8thpage"><a href="#8thpage">Paging</a></li>
+	<li data-menuanchor="About"><a href="about.html">About Us</a></li>
 </ul>
 
 <div id="fullpage">
