--- a/Index/index.html
+++ b/Index/index.html
@@ -70,6 +70,7 @@
 					   <li><a href="../Process Scheduling/src/multilevelQueue.html">Multilevel Queue</a></li>
 					   <li><a href="../Process Scheduling/src/rr.html">Round Robin</a></li>
 					   <li><a href="../Process Scheduling/src/priority.html">Priority Scheduling</a></li>
+					   <li><a href="../Process Scheduling/src/srtf.html">Shortest Remaining Time First</a></li>
 					 </ul>
 				</div>
 			</div>
