--- a/Index/about.html
+++ b/Index/about.html
@@ -34,9 +34,6 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Wiki</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -45,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="my-4">Our Team</h2>
+          <h2 class="my-4">This web-app simulates concepts of Operating system. It is HTML5, Bootstrap CSS, and Javascript based simulator.<br><br>Our Team</h2>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <h3>Aashay Maheshwarkar
