--- a/Process Scheduling/src/multilevelQueue.html
+++ b/Process Scheduling/src/multilevelQueue.html
@@ -7,7 +7,24 @@
     <script type="text/javascript" src="../js/multi.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
     <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
-</head>
+		<style>
+			body {
+				background-color: rgb(60,179,113);
+			}
+	
+			.circle {
+				border-radius: 25px;
+				font-size: 20px;
+				color: #fff;
+				text-align: center;
+				background: #000;
+			}
+			#heading
+			{
+				padding-top: 25px;
+			}
+		</style>
+	</head>
 
 <body >
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
