--- a/Process Scheduling/src/srtf.html
+++ b/Process Scheduling/src/srtf.html
@@ -7,7 +7,41 @@
     <script type="text/javascript" src="../js/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
     <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
-</head>
+		<style>
+			body {
+				background-color: rgb(60,179,113);
+			}
+	
+			.circle {
+				border-radius: 25px;
+				font-size: 20px;
+				color: #fff;
+				text-align: center;
+				background: #000;
+			}
+			#heading
+			{
+				padding-top: 25px;
+			}
+		</style>
+	</head>
+	<style>
+		body {
+			background-color: rgb(60,179,113);
+		}
+
+		.circle {
+			border-radius: 25px;
+			font-size: 20px;
+			color: #fff;
+			text-align: center;
+			background: #000;
+		}
+		#heading
+		{
+			padding-top: 25px;
+		}
+	</style>
 <body >
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="../../Index/index.html#firstPage">Operationg System Simulator</a>
