--- a/Disk/disk.html
+++ b/Disk/disk.html
@@ -139,8 +139,8 @@
 			<br>
 			<br>
             <div class="container">
-				      <div id="alg_name"></div>
-                <div id="alg_seek"></div>   
+				      <div id="alg_name" style="color:#000"></div>
+                <div id="alg_seek" style="color:#000"></div>   
 			      </div>
 			      <div class="container">
 			       <div id="graph_area"></div>
