--- a/Index/about.html
+++ b/Index/about.html
@@ -90,7 +90,7 @@
           <h3>Ankit Jain
             <small>171CO208</small>
           </h3>
-          <p>Paging (Logical to Physical Address)<br>Page Replacement (FIFO, LRU, MRU, OPTIMAL, LFU, MFU)</p>
+          <p>Paging ( with following replacement algorithms: FIFO, LRU, MRU, OPTIMAL, LFU, MFU)</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <h3>Arjun
