--- a/Process Scheduling/src/rr.html
+++ b/Process Scheduling/src/rr.html
@@ -81,6 +81,7 @@
 			</div>
             <button type="submit" id="add" class="btn btn-primary" style="margin-left: 36px" onclick="addToList()">Add</button>
 			<br>
+
 			<div class="form-group" style="margin-left: 36px; float:left; width: 20%;">
 				<label class="col-form-label" for="inputDefault">Time Quantum: </label>
 				<input class="form-control" id = "tq" name="tq" placeholder="quantum" type="text" size="35">
@@ -94,6 +95,9 @@
 			<div style="margin-top: 50px;">
 				<button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="clearData()">Clear Data</button>
 				<button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="showOutput(3)">Schedule It!</button>
+				 <br><br><br>
+             <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Scheduling_(computing)" role="button" style="margin-left: 30px">Wiki</a>
+             <br>
 			</div>
 		</div>
 
