--- a/Process synchronization/producer_consumer.html
+++ b/Process synchronization/producer_consumer.html
@@ -66,7 +66,7 @@
 		            <hr class="my-4">
 		            <p>There is a buffer of n slots and each slot is capable of storing one unit of data. There are two processes running, namely, producer and consumer, which are operating on the buffer. A producer tries to insert data into an empty slot of the buffer. A consumer tries to remove data from a filled slot in the buffer.</p>
 		            <p class="lead">
-		              <a class="btn btn-success" href="#" role="button">Wiki</a>
+		              <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Producer%E2%80%93consumer_problem" role="button">Wiki</a>
 		            </p>
 		            <p class="lead">
 		              <a class="btn btn-success" href="producer_consumer.html#anim" role="button">Play</a>
