--- a/Process Scheduling/src/fcfs.html
+++ b/Process Scheduling/src/fcfs.html
@@ -96,6 +96,9 @@
                 <button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="clearData()">Clear Data</button>
                 <button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="showOutput(0)">Schedule It!</button>
             </div>
+            <br>
+             <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Scheduling_(computing)" role="button" style="margin-left: 155px">Wiki</a>
+             <br>
                 <!-- <div>
                     <button class="btn btn-success" onclick="clearData()" style="float:right; margin-right: 50px;">Clear Data</button>
                     <button class="btn btn-success" onclick="showOutput(0)" style="float:right; margin-right: 50px;">Schedule</button>
