--- a/Process synchronization/dining.html
+++ b/Process synchronization/dining.html
@@ -65,7 +65,7 @@
 		            <hr class="my-4">
 		            <p>Consider five philosophers seated around a circular table, who spend their lives just thinking and eating. The table has a plate of spaghetti. However, there are only five chopsticks available. Each philosopher thinks. When he gets hungry, he picks up the two chopsticks that are closest to him. If a philosopher can pick up both chopsticks, he eats for a while. After a philosopher finishes eating, he puts down the chopsticks and starts to think.</p>
 		            <p class="lead">
-		              <a class="btn btn-success" href="#" role="button">Wiki</a>
+		              <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Dining_philosophers_problem" role="button">Wiki</a>
 		            </p>
 		            <p class="lead">
 		              <a class="btn btn-success" href="dining.html#anim" role="button">Play</a>
