--- a/Process Scheduling/src/sjf.html
+++ b/Process Scheduling/src/sjf.html
@@ -84,6 +84,9 @@
 			<button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="clearData()">Clear Data</button>
 			<button type="submit" class="btn btn-primary" style="margin-left: 36px; float: right;" onclick="showOutput(1)">Schedule It!</button>
 		</div>
+     <br>
+             <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Scheduling_(computing)" role="button" style="margin-left: 155px">Wiki</a>
+             <br>
     <!-- Table -->
     <div style="margin-top: 50px;">
         <h2 id="table-heading" style="text-align:center;"></h2>
